get_offers implementation

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = target-python-sdk
-version = {current_version}
+version = 0.0.1
 description = Adobe Target Python SDK
 url = https://github.com/adobe/target-python-sdk
 license_files = LICENSE.txt
@@ -13,4 +13,6 @@ current_version = 0.0.1
 commit = True
 tag = True
 [bumpversion:file:setup.cfg]
+search = target_python_sdk=={current_version}
+replace = target_python_sdk=={new_version}
 
