--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,8 @@ jobs:
       - uses: actions/checkout@main
       - name: Set up Python ${{matrix.python-version}}
         uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
       - name: lint, test, build
         env:
           CI: true
