make things back compat with python 2.7

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
         env:
           CI: true
           PYTHON_PATH: python
+          PYTHON_VERSION: ${{ matrix.python-version }}
         run: |
           make pre_build
       - name: generate coveralls coverage
