--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,9 @@ jobs:
           PYTHON_VERSION: ${{ matrix.python-version }}
         run: |
           make pre_build
-      - name: generate coveralls coverage
+      - run: echo "COVERALLS_SUPPORTED=3.5,3.6,3.7,3.8,3.9" >> $GITHUB_ENV
+      - if: contains(env.COVERALLS_SUPPORTED, matrix.python-version)
+        name: generate coveralls coverage
         run: coveralls
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
