--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,19 +19,25 @@ jobs:
       - uses: actions/checkout@main
       - name: Set up Python ${{matrix.python-version}}
         uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
       - name: lint, test, build
         env:
           CI: true
           PYTHON_PATH: python
+          PYTHON_VERSION: ${{ matrix.python-version }}
         run: |
           make pre_build
-      - name: generate coveralls coverage
-        run: coveralls --service=github
+      - run: echo "COVERALLS_SUPPORTED=3.5,3.6,3.7,3.8,3.9" >> $GITHUB_ENV
+      - if: contains(env.COVERALLS_SUPPORTED, matrix.python-version)
+        name: generate coveralls coverage
+        run: coveralls
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COVERALLS_FLAG_NAME: ${{ matrix.test-name }}
           COVERALLS_PARALLEL: true
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+          COVERALLS_SERVICE_NAME: github
 
   coverage:
     needs: build
