--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,24 +28,12 @@ jobs:
           PYTHON_VERSION: ${{ matrix.python-version }}
         run: |
           make pre_build
-      - run: echo "COVERALLS_SUPPORTED=3.5,3.6,3.7,3.8,3.9" >> $GITHUB_ENV
+      - run: echo "COVERALLS_SUPPORTED=3.9" >> $GITHUB_ENV
       - if: contains(env.COVERALLS_SUPPORTED, matrix.python-version)
         name: generate coveralls coverage
-        run: coveralls
+        run: coveralls --service=github
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COVERALLS_FLAG_NAME: ${{ matrix.test-name }}
-          COVERALLS_PARALLEL: true
+          COVERALLS_PARALLEL: false
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-
-  coverage:
-    needs: build
-    runs-on: ubuntu-latest
-    container: python:3-slim
-    steps:
-      - name: upload coveralls coverage
-        run: |
-          pip install --upgrade wheel coveralls
-          coveralls --finish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
