Squashed 'openapi/' changes from ed1850b..e4fa8ea
e4fa8ea Merge pull request #6 from adobe/TNT-40664_2
e2dd234 fix for DeliveryResponse notifications
9cf4475 Add analytics payload to Metric model for A4T support with prefetch (#5)
671d16a Update README.md
28c9893 Merge pull request #4 from adobe/TNT-40664
d25e9e8 Add LF
4bdffa7 Add notifications field to DeliveryResponse
bbbf35b TNT-40603 - adding preview mode to Delivery API (#3)
29df471 Add links to README (#1)

git-subtree-dir: openapi
git-subtree-split: e4fa8ea5a3733ef20eba43e162db9f49a5817b63

--- a/delivery/components/DeliveryRequest.yaml
+++ b/delivery/components/DeliveryRequest.yaml
@@ -43,3 +43,5 @@ DeliveryRequest:
         $ref: "./Notification.yaml#/Notification"
     qaMode:
       $ref: "../../common/components/QAMode.yaml#/QAMode"
+    preview:
+      $ref: "../../common/components/Preview.yaml#/Preview"
