--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,8 +34,10 @@ jobs:
             parallel: true
             flag-name: Python-${{ matrix.python-version }}
             github-token: ${{ secrets.COVERALLS_REPO_TOKEN }}
+            debug: true
 
   coveralls_finish:
+    name: Report Coverage
     needs: build
     runs-on: ubuntu-18.04
     steps:
