--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,15 @@ license_files = LICENSE.txt
 
 [options]
 python_requires = >=2.7, >=3.6
+packages = find:
+
+[options.packages.find]
+exclude =
+    *tests*
+    samples*
+
+[bdist_wheel]
+universal=1
 
 [bumpversion]
 current_version = 0.0.0
