Update setup.cfg with proper search/replace for version bump

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,6 @@ current_version = 0.0.0
 commit = True
 tag = True
 [bumpversion:file:setup.cfg]
-search = target_python_sdk=={current_version}
-replace = target_python_sdk=={new_version}
+search = current_version = {current_version}
+replace = current_version = {new_version}
 
