--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,6 +33,8 @@ jobs:
         CI: true
         PYTHON_PATH: python
       run: |
+        git config --global user.email "target-python-sdk-release@adobe.com"
+        git config --global user.name "target-python-sdk release bot"
         make version_bump part=${{ github.event.inputs.bump }}
         make build
         make publish
