Include README text as project description for pypi page

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [metadata]
 name = target-python-sdk
 description = Adobe Target Python SDK
+long_description = file: README.md
 url = https://github.com/adobe/target-python-sdk
 license_files = LICENSE.txt
 
