Add long_description_content_type to setup.cfg for pretty pypi page

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 name = target-python-sdk
 description = Adobe Target Python SDK
 long_description = file: README.md
+long_description_content_type = "text/markdown"
 url = https://github.com/adobe/target-python-sdk
 license_files = LICENSE.txt
 
