Attempt to fix version bump in publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,13 @@ jobs:
         PYTHON_VERSION: 3.9
       run: |
         make pre_build
+    - name: Bump version
+      env:
+        PYTHON_PATH: python
+      run: |
+        git config user.email "Grp-opensourceoffice@adobe.com"
+        git config user.name "Adobe Release Bot"
+        make version_bump part=${{ github.event.inputs.bump }} --verbose
     - name: Build and publish new version
       env:
         TWINE_USERNAME: __token__
@@ -33,8 +40,5 @@ jobs:
         CI: true
         PYTHON_PATH: python
       run: |
-        git config user.email "Grp-opensourceoffice@adobe.com"
-        git config user.name "Adobe Release Bot"
-        make version_bump part=${{ github.event.inputs.bump }}
         make build
         make publish
