Squashed 'openapi/' changes from ed1850b..ca3c289
ca3c289 TNT-44008 Fix AP pre-fetch documentation (#15)
0df2586 TNT-43882: [Delivery API] Update public docs with ref to click-track metric (#13)
1b0e12d added client hints to context (#14)
8b34ffd Merge pull request #12 from ndiaconu/patch-1
495416c Update AnalyticsRequest.yaml
ad59cdd rename telemetry blob field to telemetryServerToken for request and response (#11)
6e6c5af add encoded telemetry fields to support data collected on Edge (#10)
be8f79c update TelemetryRequest fields to be double type (#9)
6240685 various bug fixes because java generator strictly follows openapi 3.0 spec (#8)
4bc2f19 TNT-41043 Add more fields to openapi telemetry spec (#7)
e4fa8ea Merge pull request #6 from adobe/TNT-40664_2
e2dd234 fix for DeliveryResponse notifications
9cf4475 Add analytics payload to Metric model for A4T support with prefetch (#5)
671d16a Update README.md
28c9893 Merge pull request #4 from adobe/TNT-40664
d25e9e8 Add LF
4bdffa7 Add notifications field to DeliveryResponse
bbbf35b TNT-40603 - adding preview mode to Delivery API (#3)
29df471 Add links to README (#1)

git-subtree-dir: openapi
git-subtree-split: ca3c2892d21f07a1163f7e24df49593fbb1cdfb3

--- a/delivery/components/AnalyticsRequest.yaml
+++ b/delivery/components/AnalyticsRequest.yaml
@@ -14,7 +14,7 @@ AnalyticsRequest:
       $ref: "./LoggingType.yaml#/LoggingType"
     trackingServer:
       type: string
-      description: tracking server
+      description: tracking server domain (should not include http://)
     trackingServerSecure:
       type: string
-      description: secure tracking server
+      description: secure tracking server domain (should not include https://)
