--- a/delivery/components/DeliveryResponse.yaml
+++ b/delivery/components/DeliveryResponse.yaml
@@ -22,4 +22,11 @@ DeliveryResponse:
       $ref: "./ExecuteResponse.yaml#/ExecuteResponse"
     prefetch:
       $ref: "./PrefetchResponse.yaml#/PrefetchResponse"
+    notifications:
+      type: array
+      items:
+        $ref: "./NotificationResponse.yaml#/NotificationResponse"
+    telemetryServerToken:
+      type: string
+      description: Encoded data with request telemetry collected from Delivery API
     
