--- a/delivery/components/PrefetchResponse.yaml
+++ b/delivery/components/PrefetchResponse.yaml
@@ -2,7 +2,7 @@ openapi: "3.0.0"
 PrefetchResponse:
   type: object
   description: |
-    The object that will return the prefetched content based on the request, active activites etc
+    The object that will return the prefetched content based on the request, active activities etc
   properties:
     views:
       type: array
@@ -21,12 +21,11 @@ PrefetchResponse:
     metrics:
       type: array
       description: |
-        The click track metrics that are not assigned to a view but are present in activites that have views, except
-        in case the same activity is serving content for selectors both assinged to a view and selectors without any
-        views, and having click track metrics that are not assotiated with any view within the activity, then:
-          * in case of a prefetch only request, these metrics (tokens) will be set in the prefetch response's metrics.
-          * in case of an execute only request, the metrics will be set in the page load response's metrics.
-          * in case of a request, with both, execute and prefetch, metrics will be set in the page load response's
-            metrics only.
+        Click track metrics that are not assigned with a view but are present in activities that have views.
+        If the same activity is serving content for selectors on a view and selectors unassociated with
+        views, and having click track metrics not associated with any view within the activity, then:
+          * in case of a prefetch-only request, these metrics (tokens) will be set in the prefetch response's metrics.
+          * in case of an execute-only request, the metrics will be set in the pageLoad response's metrics.
+          * in case of a request, with both execute and prefetch, the metrics will be set in the pageLoad response's metrics only.
       items:
         $ref: "./Metric.yaml#/Metric"
