--- a/delivery/components/PageLoadResponse.yaml
+++ b/delivery/components/PageLoadResponse.yaml
@@ -16,12 +16,11 @@ PageLoadResponse:
       type: array
       description: |
         Click track metrics. Note that click metrics for selectors set with views will not be included here.
-        In case the same activity is serving content for selectors both assinged to a view and selectors without any
-        views, and having click track metrics that are not assotiated with any view within the activity, then:
-          * in case of a prefetch only request, these metrics (tokens) will be set in the Prefetch response's metrics.
-          * in case of an execute only request, the metrics will be set in the page load response's metrics.
-          * in case of a request, with both, execute and prefetch, metrics will be set in the page load response's
-            metrics only.
+        If the same activity is serving content for selectors on a view and selectors unassociated with
+        views, and having click track metrics not associated with any view within the activity, then:
+          * in case of a prefetch-only request, these metrics (tokens) will be set in the prefetch response's metrics.
+          * in case of an execute-only request, the metrics will be set in the pageLoad response's metrics.
+          * in case of a request, with both execute and prefetch, the metrics will be set in the pageLoad response's metrics only.
       items:
         $ref: "./Metric.yaml#/Metric"
     analytics:
