need to ignore R1728 to pass pylint and support python2

--- a/.pylintrc
+++ b/.pylintrc
@@ -8,4 +8,4 @@ ignore=tests
 # Minimum lines number of a similarity.
 min-similarity-lines=30
 
-disable=W0212,R0205,R0904,R0401,W0231,R0902,W0703,W0613,R0903,R0913,W0231,W1514,C0209
+disable=W0212,R0205,R0904,R0401,W0231,R0902,W0703,W0613,R0903,R0913,W0231,W1514,C0209,R1728
