--- a/openapi/common/components/ABTOrder.yaml
+++ b/openapi/common/components/ABTOrder.yaml
@@ -15,8 +15,9 @@ ABTOrder:
       minimum: 0
       description: |
         Order Total. The amount of money in the current order.
-    time: 
-      type: date-time
+    time:
+      type: string
+      format: date-time
       description: |
         Time in the [ISO 8601](https://en.wikipedia.org/wiki/ISO_8601#Time_intervals) format
     productIds:
